# monarch-cli2

./: AGENTS.md  LICENSE  README.md  pyproject.toml
src/monarch_cli/: __init__.py  accounts.py  app.py  auth.py  config.py  errors.py  input.py  options.py  output.py  session.py  theme.py
src/monarch_cli/groups/: __init__.py  accounts.py  auth.py  budget.py  cashflow.py  categories.py  goals.py  household.py  investments.py  merchants.py  receipts.py  recurring.py  reports.py  tags.py  transactions.py
tests/: test_accounts_commands.py  test_auth_commands.py  test_categories_commands.py  test_errors.py  test_goals_commands.py  test_household_commands.py  test_merchants_commands.py  test_output.py  test_receipts_commands.py  test_reports_commands.py  test_tags_commands.py  test_transactions_commands.py
tests/groups/: test_accounts_commands.py  test_auth_commands.py  test_budget_commands.py  test_cashflow_commands.py  test_investments_commands.py  test_recurring_commands.py  test_transactions_commands.py
